tests/org.eclipse.n4js.bugreports.tests/bugreports-tests/IDE_0379_CastingAutoBoxUnbox.n4js.xt
/*
 * Copyright (c) 2016 NumberFour AG.
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the Eclipse Public License v1.0
 * which accompanies this distribution, and is available at
 * http://www.eclipse.org/legal/epl-v10.html
 *
 * Contributors:
 *   NumberFour AG - Initial API and implementation
 */

/* XPECT_SETUP org.eclipse.n4js.bugreports.tests.N4JSBugreportTest END_SETUP  */


// Note: It is coercing rather than boxing, as we do not have influence on the runtime
// neither autoboxing nor unboxing working/implemented


var four : number = 4; //fine
const Five : Number = new Number(5); //fine
// ok XPECT errors --> "6 is not a subtype of Number." at "6.0"
const SixNum : Number = 6.0;

// ok XPECT errors --> "6 is not a subtype of Number." at "6"
const SixInt : Number = 6;

// ok XPECT errors -->"Number is not a subtype of number." at "new Number(7)"
var sevenNum : number = new Number(7);

// ok XPECT errors -->"Number is not a subtype of int." at "new Number(7)"
var sevenInt : int = new Number(7);


function doStuff(str : String) {}

doStuff(new String("some stuff")); //works
// ok XPECT errors -->""some stuff" is not a subtype of String." at ""some stuff""
doStuff("some stuff"); //error
